@@ -4,9 +4,9 @@
 
 /* set up throttling based on RADIUS reply */
 
-char const *cvs_id = "$Id: autothrottle.c,v 1.7 2004-11-05 04:55:26 bodea Exp $";
+char const *cvs_id = "$Id: autothrottle.c,v 1.8 2004-11-09 08:05:02 bodea Exp $";
 
-int __plugin_api_version = 1;
+int __plugin_api_version = PLUGIN_API_VERSION;
 struct pluginfuncs *p;
 
 #define THROTTLE_KEY "lcp:interface-config"
@@ -64,8 +64,18 @@ int plugin_radius_response(struct param_radius_response *data)
 	{
 		if (strcmp(data->value, "yes") == 0)
 		{
-			p->log(3, 0, p->get_id_by_session(data->s), data->s->tunnel, "         Throttling user\n");
-			data->s->throttle_in = data->s->throttle_out = config->rl_rate;
+		    	unsigned long *rate = p->getconfig("throttle_speed", UNSIGNED_LONG);
+			if (rate)
+			{
+				if (*rate)
+					p->log(3, 0, p->get_id_by_session(data->s), data->s->tunnel, "         Throttling user to %dkb/s\n", *rate);
+				else
+					p->log(3, 0, p->get_id_by_session(data->s), data->s->tunnel, "         Not throttling user (throttle_speed=0)\n");
+
+				data->s->throttle_in = data->s->throttle_out = *rate;
+			}
+			else
+				p->log(1, 0, p->get_id_by_session(data->s), data->s->tunnel, "Not throttling user (can't get throttle_speed)\n");
 		}
 		else if (strcmp(data->value, "no") == 0)
 		{
